src/test/ui/resolve/resolve-hint-macro.stderr
error[E0423]: expected function, found macro `assert`
  --> $DIR/resolve-hint-macro.rs:2:5
   |
LL |     assert(true);
   |     ^^^^^^ help: use `!` to invoke the macro: `assert!`

error[E0423]: expected function, found macro `format`
  --> $DIR/resolve-hint-macro.rs:4:5
   |
LL |     format(""); // shouldn't suggest import candidates
   |     ^^^^^^ help: use `!` to invoke the macro: `format!`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
